Fixed the HTML 'overflow' color

--- a/src/sass/_tokens.scss
+++ b/src/sass/_tokens.scss
@@ -1,5 +1,5 @@
 // color
-$brand-primary: #091337;
+$brand-primary: #020102;
 $brand-secondary: #7a839e;
 $brand-white: #fff;
 $brand-black: #000;
